@@ -1,0 +1,81 @@
+/* XPM */
+static char * tX_min_control_xpm[] = {
+"10 10 68 1",
+" 	c None",
+".	c #FBEBE9",
+"+	c #FBEDEB",
+"@	c #F6E9E7",
+"#	c #DACCC9",
+"$	c #9B8F8C",
+"%	c #FDEAE8",
+"&	c #FDECEA",
+"*	c #F2E3E0",
+"=	c #D7C9C7",
+"-	c #BFB3B0",
+";	c #B6AAA8",
+">	c #837775",
+",	c #FAE1E0",
+"'	c #FDE7E4",
+")	c #EED8D6",
+"!	c #D3BEBB",
+"~	c #BFAFAC",
+"{	c #B7A8A6",
+"]	c #AFA3A1",
+"^	c #A29693",
+"/	c #362825",
+"(	c #F8DBD9",
+"_	c #E7CBC7",
+":	c #CCB2AF",
+"<	c #C1AAA6",
+"[	c #B9A5A3",
+"}	c #B1A19E",
+"|	c #A89A98",
+"1	c #9E928F",
+"2	c #403432",
+"3	c #D8B1AB",
+"4	c #A77D76",
+"5	c #805B56",
+"6	c #B39692",
+"7	c #B49C99",
+"8	c #AA9895",
+"9	c #9D8F8C",
+"0	c #7B6E6C",
+"a	c #271A19",
+"b	c #AC665E",
+"c	c #7F3428",
+"d	c #754039",
+"e	c #906E6A",
+"f	c #AC938F",
+"g	c #998683",
+"h	c #6B5A57",
+"i	c #2E211E",
+"j	c #100403",
+"k	c #B25249",
+"l	c #CA7966",
+"m	c #B47268",
+"n	c #B38E88",
+"o	c #937975",
+"p	c #5A4542",
+"q	c #241412",
+"r	c #110303",
+"s	c #87352C",
+"t	c #A4726B",
+"u	c #896763",
+"v	c #4A302D",
+"w	c #1E0B08",
+"x	c #140202",
+"y	c #120302",
+"z	c #3A0D0A",
+"A	c #270A08",
+"B	c #1C0503",
+"C	c #180302",
+"          ",
+"   .+@#$  ",
+"  %&*=-;> ",
+" ,')!~{]^/",
+" (_:<[}|12",
+" 34567890a",
+" bcdefghij",
+" klmnopqr ",
+"  stuvwxy ",
+"   zABC   "};
